# sqlhook-gateway

./: .gitignore  Cargo.toml  README.md  config.example.yaml  test-config.yaml
frontend/: README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  theme.ts
frontend/src/api/: apiClient.ts
frontend/src/components/: CodeEditor.tsx  DataTable.tsx  Layout.tsx  PageHeader.tsx
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  Jobs.tsx  NotFound.tsx  Routes.tsx
migrations/: 0001_init.sql
src/: cli.rs  delivery.rs  error.rs  main.rs  metrics.rs  retry.rs  signature.rs  transform.rs  worker.rs
src/config/: mod.rs  schema.rs
src/queue/: mod.rs  sqlite.rs
src/server/: api.rs  ingest.rs  metrics.rs  mod.rs
